--- a/packaging/nginx-studiocommand.conf
+++ b/packaging/nginx-studiocommand.conf
@@ -1,14 +1,17 @@
 map $http_upgrade $connection_upgrade { default upgrade; '' close; }
 
+# HTTP (optional) - redirect to HTTPS on 8443
 server {
   listen 80;
   server_name studiocommand.example.org;
+
   location ^~ /.well-known/acme-challenge/ { root /var/www/letsencrypt; }
-  location / { return 301 https://$host$request_uri; }
+  location / { return 301 https://$host:8443$request_uri; }
 }
 
+# HTTPS on 8443
 server {
-  listen 443 ssl http2;
+  listen 8443 ssl http2;
   server_name studiocommand.example.org;
 
   ssl_certificate     /etc/letsencrypt/live/studiocommand.example.org/fullchain.pem;
