--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,10 +1,14 @@
-name: build
+name: build-and-release
 
 on:
   push:
     branches: [ "main" ]
+    tags: [ "v*" ]
   pull_request:
   workflow_dispatch:
+
+permissions:
+  contents: write
 
 jobs:
   build:
@@ -31,28 +35,98 @@ jobs:
         if: matrix.arch == 'aarch64'
         run: |
           sudo apt-get update
-          sudo apt-get install -y gcc-aarch64-linux-gnu
+          sudo apt-get install -y gcc-aarch64-linux-gnu libc6-dev-arm64-cross
 
       - name: Build engine
+        env:
+          # Ensure we link with the correct cross toolchain for aarch64 builds.
+          CARGO_TARGET_AARCH64_UNKNOWN_LINUX_GNU_LINKER: aarch64-linux-gnu-gcc
+          CC_aarch64_unknown_linux_gnu: aarch64-linux-gnu-gcc
+          AR_aarch64_unknown_linux_gnu: aarch64-linux-gnu-ar
         run: |
           cd engine
           cargo build --release --target ${{ matrix.target }}
 
-      - name: Assemble tarball
+      - name: Assemble tarball + per-arch checksum
         run: |
           VERSION=$(cat VERSION | tr -d '\n')
-          mkdir -p dist pkg/studiocommand/web pkg/studiocommand/systemd
+          mkdir -p dist pkg/studiocommand/web pkg/studiocommand/systemd pkg/studiocommand/nginx
+
           cp engine/target/${{ matrix.target }}/release/studiocommand-engine pkg/studiocommand/
           cp -a web/. pkg/studiocommand/web/
           cp packaging/studiocommand.service pkg/studiocommand/systemd/
-          mkdir -p pkg/studiocommand/nginx
           cp packaging/nginx-studiocommand.conf pkg/studiocommand/nginx/nginx-studiocommand.conf
           echo "$VERSION" > pkg/studiocommand/VERSION
+
           tar -czf dist/${{ matrix.pkg }} -C pkg studiocommand
+
+          # Produce a per-arch checksum file. We'll merge these later into a single sha256sums.txt.
+          (cd dist && sha256sum ${{ matrix.pkg }} > sha256sums-${{ matrix.arch }}.txt)
+
           ls -lh dist
 
-      - name: Upload artifact
+      - name: Upload artifacts (tarball + per-arch checksum)
         uses: actions/upload-artifact@v4
         with:
-          name: ${{ matrix.pkg }}
-          path: dist/${{ matrix.pkg }}
+          name: dist-${{ matrix.arch }}
+          path: |
+            dist/${{ matrix.pkg }}
+            dist/sha256sums-${{ matrix.arch }}.txt
+
+  merge-checksums:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Download x86_64 artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: dist-x86_64
+          path: dist-x86_64
+
+      - name: Download aarch64 artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: dist-aarch64
+          path: dist-aarch64
+
+      - name: Merge sha256 sums into one file
+        run: |
+          mkdir -p dist
+          # Copy tarballs into a single dist/ directory for the release job.
+          cp -f dist-x86_64/*.tar.gz dist/
+          cp -f dist-aarch64/*.tar.gz dist/
+
+          # Merge checksum lines (one per tarball) into sha256sums.txt.
+          cat dist-x86_64/sha256sums-*.txt dist-aarch64/sha256sums-*.txt > dist/sha256sums.txt
+
+          echo "Merged checksums:"
+          cat dist/sha256sums.txt
+
+          ls -lh dist
+
+      - name: Upload merged artifacts (tarballs + sha256sums.txt)
+        uses: actions/upload-artifact@v4
+        with:
+          name: dist-merged
+          path: |
+            dist/*.tar.gz
+            dist/sha256sums.txt
+
+  release:
+    runs-on: ubuntu-latest
+    needs: merge-checksums
+    if: startsWith(github.ref, 'refs/tags/v')
+    steps:
+      - name: Download merged artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: dist-merged
+          path: dist
+
+      - name: Create GitHub Release (upload assets)
+        uses: softprops/action-gh-release@v2
+        with:
+          files: |
+            dist/*.tar.gz
+            dist/sha256sums.txt
+          generate_release_notes: true
