--- a/packaging/nginx-studiocommand.conf
+++ b/packaging/nginx-studiocommand.conf
@@ -1,17 +1,31 @@
-map $http_upgrade $connection_upgrade { default upgrade; '' close; }
+map $http_upgrade $connection_upgrade {
+  default upgrade;
+  ''      close;
+}
 
-# HTTP (optional) - redirect to HTTPS on 8443
+#
+# HTTP → HTTPS redirect (keeps ACME challenge working for Let's Encrypt)
+#
 server {
   listen 80;
   server_name studiocommand.example.org;
 
-  location ^~ /.well-known/acme-challenge/ { root /var/www/letsencrypt; }
-  location / { return 301 https://$host:9443$request_uri; }
+  location ^~ /.well-known/acme-challenge/ {
+    root /var/www/letsencrypt;
+  }
+
+  location / {
+    return 301 https://$host:9443$request_uri;
+  }
 }
 
-# HTTPS on 8443
+#
+# HTTPS reverse proxy for StudioCommand (public entrypoint)
+#
 server {
-  listen 9443 ssl http2;
+  listen 9443 ssl;
+  http2 on;
+
   server_name studiocommand.example.org;
 
   ssl_certificate     /etc/letsencrypt/live/studiocommand.example.org/fullchain.pem;
@@ -21,20 +35,22 @@ server {
   add_header X-Frame-Options SAMEORIGIN always;
   add_header Referrer-Policy no-referrer always;
 
-  proxy_set_header Host $host;
-  proxy_set_header X-Real-IP $remote_addr;
-  proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+  proxy_set_header Host              $host;
+  proxy_set_header X-Real-IP         $remote_addr;
+  proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
   proxy_set_header X-Forwarded-Proto $scheme;
 
+  # WebSocket endpoint(s)
   location ^~ /ws/ {
     proxy_pass http://127.0.0.1:3000;
     proxy_http_version 1.1;
-    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Upgrade    $http_upgrade;
     proxy_set_header Connection $connection_upgrade;
     proxy_read_timeout 3600;
     proxy_send_timeout 3600;
   }
 
+  # Main app
   location / {
     proxy_pass http://127.0.0.1:3000;
     proxy_read_timeout 120;
