--- a/packaging/nginx-studiocommand.conf
+++ b/packaging/nginx-studiocommand.conf
@@ -3,9 +3,6 @@ map $http_upgrade $connection_upgrade {
   ''      close;
 }
 
-#
-# HTTP → HTTPS redirect (keeps ACME challenge working for Let's Encrypt)
-#
 server {
   listen 80;
   server_name studiocommand.example.org;
@@ -19,9 +16,6 @@ server {
   }
 }
 
-#
-# HTTPS reverse proxy for StudioCommand (public entrypoint)
-#
 server {
   listen 9443 ssl;
   http2 on;
@@ -35,12 +29,25 @@ server {
   add_header X-Frame-Options SAMEORIGIN always;
   add_header Referrer-Policy no-referrer always;
 
-  proxy_set_header Host              $host;
-  proxy_set_header X-Real-IP         $remote_addr;
-  proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
-  proxy_set_header X-Forwarded-Proto $scheme;
+  # Serve the UI directly from disk.
+  location / {
+    root /opt/studiocommand/current/web;
+    try_files $uri $uri/ /index.html;
+  }
 
-  # WebSocket endpoint(s)
+  # Proxy REST API to the engine.
+  location ^~ /api/ {
+    proxy_pass http://127.0.0.1:3000;
+    proxy_read_timeout 120;
+    proxy_send_timeout 120;
+
+    proxy_set_header Host              $host;
+    proxy_set_header X-Real-IP         $remote_addr;
+    proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
+  }
+
+  # Proxy WebSockets (future remote producer sessions).
   location ^~ /ws/ {
     proxy_pass http://127.0.0.1:3000;
     proxy_http_version 1.1;
@@ -48,12 +55,10 @@ server {
     proxy_set_header Connection $connection_upgrade;
     proxy_read_timeout 3600;
     proxy_send_timeout 3600;
-  }
 
-  # Main app
-  location / {
-    proxy_pass http://127.0.0.1:3000;
-    proxy_read_timeout 120;
-    proxy_send_timeout 120;
+    proxy_set_header Host              $host;
+    proxy_set_header X-Real-IP         $remote_addr;
+    proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
   }
 }
