--- a/engine/Cargo.toml
+++ b/engine/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "studiocommand-engine"
-version = "0.1.22"
+version = "0.1.23"
 edition = "2021"
 
 [dependencies]
@@ -13,3 +13,4 @@ tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 sysinfo = "0.33"
 anyhow = "1"
+uuid = { version = "1", features = ["v4", "serde"] }
