--- a/engine/Cargo.toml
+++ b/engine/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
 name = "studiocommand-engine"
-version = "0.1.38"
+version = "0.1.39"
 edition = "2021"
 
 [dependencies]
 axum = { version = "0.7", features = ["ws"] }
-tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
+tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "process", "io-util", "time"] }
 tower-http = { version = "0.6", features = ["fs", "trace"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
