--- a/engine/Cargo.toml
+++ b/engine/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "studiocommand-engine"
-version = "0.1.40"
+version = "0.1.41"
 edition = "2021"
 
 [dependencies]
@@ -15,3 +15,4 @@ sysinfo = "0.33"
 anyhow = "1"
 uuid = { version = "1", features = ["v4", "serde"] }
 rusqlite = { version = "0.32", features = ["bundled"] }
+fastrand = "2"
