--- a/packaging/nginx-studiocommand.conf
+++ b/packaging/nginx-studiocommand.conf
@@ -28,6 +28,22 @@ server {
   add_header X-Content-Type-Options nosniff always;
   add_header X-Frame-Options SAMEORIGIN always;
   add_header Referrer-Policy no-referrer always;
+  # Prevent browsers from caching the UI shell.
+  #
+  # StudioCommand UI is a single-page app (index.html + app.js). If a browser
+  # caches an older app.js, the UI can appear stuck in DEMO mode and buttons
+  # may not work due to mismatched JS/HTML.
+  #
+  # We solve this in two layers:
+  #   1) index.html references app.js with a version query string.
+  #   2) nginx marks index.html + app.js as no-store.
+  location = /index.html {
+    add_header Cache-Control "no-store" always;
+  }
+  location = /app.js {
+    add_header Cache-Control "no-store" always;
+  }
+
 
   # Serve the UI directly from disk.
   location / {
