--- a/packaging/nginx-studiocommand.conf
+++ b/packaging/nginx-studiocommand.conf
@@ -44,6 +44,27 @@ server {
     add_header Cache-Control "no-store" always;
   }
 
+  location = /remote.html {
+    add_header Cache-Control "no-store" always;
+  }
+  location = /admin.html {
+    add_header Cache-Control "no-store" always;
+  }
+  location = /shared/base.js {
+    add_header Cache-Control "no-store" always;
+  }
+  location = /shared/base.css {
+    add_header Cache-Control "no-store" always;
+  }
+
+
+
+  # Friendly entrypoints (v0.1.85)
+  # These let us use clean URLs without ".html" and keep deep-links working.
+  location = /remote  { root /opt/studiocommand/current/web; try_files /remote.html =404; }
+  location = /remote/ { root /opt/studiocommand/current/web; try_files /remote.html =404; }
+  location = /admin   { root /opt/studiocommand/current/web; try_files /admin.html  =404; }
+  location = /admin/  { root /opt/studiocommand/current/web; try_files /admin.html  =404; }
 
   # Serve the UI directly from disk.
   location / {
